criação da tela de posts

--- a/ignews/package.json
+++ b/ignews/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "debug": "node --inspect",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@prismicio/client": "^5.1.0",
     "@stripe/stripe-js": "^1.17.0",
     "axios": "^0.21.1",
     "faunadb": "^4.3.0",
