--- a/ignews/package.json
+++ b/ignews/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "debug": "node --inspect",
+    "stripe": "stripe listen  --forward-to localhost:3000/api/webhooks",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -16,6 +16,7 @@
     "faunadb": "^4.3.0",
     "next": "11.1.0",
     "next-auth": "^3.28.0",
+    "prismic-dom": "^2.2.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
